debug option removed, prevent crazy stretch on vertical screens, web-app wtf

--- a/src/main.css
+++ b/src/main.css
@@ -155,7 +155,9 @@ button:focus-visible { outline: 2px solid var(--accent); }
 
 
 #app { 
-    display: grid; flex: 1; gap: 1px; width: 100%; height: 100%; 
+    display: grid; flex: 1; gap: 1px;
+    width: 100%; height: 100%; 
+    min-width: 125cqh;
     z-index: 1;
     /* will-change: transform; */
 }
